--- a/Stock-Prediction.ipynb
+++ b/Stock-Prediction.ipynb
@@ -115,7 +115,7 @@
     {
       "cell_type": "code",
       "source": [
-        "seq_length = 10  # Adjust this based on your choice\n",
+        "seq_length = 10",
         "X_train, y_train = create_sequences(train_data, seq_length)\n",
         "X_test, y_test = create_sequences(test_data, seq_length)"
       ],
